# Unofficial-Discord-Client

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  download_sdl2.py
cmake_modules/: FindSDL2.cmake
include/: imguiClient.hpp  myClient.hpp
include/discord/: InternalUtils.hpp  attachment.hpp  channel.hpp  deserializable_serializable_class_type.hpp  deserializers.hpp  discord.hpp  embed.hpp  emoji.hpp  gateway_opcodes.hpp  guild.hpp  jsonDeSerializable_class.hpp  member.hpp  message.hpp  packets.hpp  reaction.hpp  role.hpp  serializers.hpp  snowflake.hpp  token.hpp  user.hpp  userFlags.hpp  utils.hpp
include/sws/: client_ws.hpp
scripts/: GuildCreatePacket.json  GuildMemberListUpdatePacket.json  MessageCreatePacket.json  MessageReactionAddPacket.json  TestSerializers.cpp  TypingStartPacket.json  download_sdl2_win.py  serializer_generator.py
scripts/outbound_packets/: op13.json  op14.json
src/: discord.cpp  imguiClient.cpp  main.cpp
src/discord/: deserializers.cpp  discord.cpp  http_api.cpp  serializers.cpp  token.cpp  utils.cpp
